# comet

./: CMakeLists.txt  Doxyfile  README.md  README.txt  appveyor.yml  comet.nsi  comet.vim  comet_lint.lnt  cometautoexp.doxygen  install_vc6.bat  mingw64-cross-compile.sh  tlb2h.doxygen  uninstall_vc6.bat
cmake/: i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
examples/comet/ADO/: ADO.sln  ADO.vcproj  std.h  test.cpp
examples/comet/ASP/LSCache/: LSCache.cpp  LSCache.def  LSCache.h  LSCache.idl  LSCache.rc  LSCache.sln  LSCache.vcproj  cache.cpp  cache.h  resource.h  std.h
examples/comet/CP/: CP.cpp  CP.def  CP.idl  CP.rc  CP.sln  CP.vcproj  resource.h  stack.h  std.h
examples/comet/CP/test/: StdAfx.cpp  StdAfx.h  test.cpp  test.dsp  test.vcproj
examples/comet/Collections/: Collections.cpp  Collections.def  Collections.idl  Collections.rc  Collections.sln  Collections.vcproj  ReadMe.txt  map.h  objmap.cpp  objmap.h  resource.h  std.h  varset.h
examples/comet/DynamicDispatch/: DynamicDispatch.cpp  DynamicDispatch.def  DynamicDispatch.idl  DynamicDispatch.rc  DynamicDispatch.sln  DynamicDispatch.vcproj  demo.h  resource.h  std.h
examples/comet/DynamicDispatch/test/: test.cpp  test.dsp  test.vcproj
examples/comet/ParentChild/: ParentChild.cpp  ParentChild.def  ParentChild.idl  ParentChild.rc  ParentChild.sln  ParentChild.vcproj  parent.h  resource.h  std.h
examples/comet/ParentChild/test/: test.cpp  test.vcproj
examples/comet/ParentChild2/: ParentChild2.cpp  ParentChild2.def  ParentChild2.idl  ParentChild2.rc  ParentChild2.sln  ParentChild2.vcproj  ReadMe.txt  pc.cpp  pc.h  resource.h  std.cpp  std.h
examples/comet/SafeArray/: ReadMe.txt  SafeArray.cpp  SafeArray.def  SafeArray.idl  SafeArray.rc  SafeArray.sln  SafeArray.vcproj  resource.h  std.h
examples/comet/exeserver/: exeserver.rc  exeserver.sln  exeserver.vcproj  main.cpp  resource.h  std.cpp  std.h  test.idl
examples/comet/sasort/: ReadMe.txt  resource.h  sasort.cpp  sasort.def  sasort.h  sasort.idl  sasort.rc  sasort.sln  sasort.vcproj  std.h
include/comet/: array.h  assert.h  atl_module.h  auto_buffer.h  bstr.h  calllog.h  cmd_line_parser.h  comet.h  common.h  config.h  cp.h  cptraits.h  currency.h  date.h  datetime.h  dispatch.h  enum.h  enum_common.h  enum_iterator.h  error.h  error_fwd.h  exe_server.h  functor.h  git.h  handle.h  handle_except.h  impqi.h  interface.h  invariant_lock.h  lw_lock.h  module.h  oleidl_comtypes.h  ptr.h  reference_count.h  registry.h  regkey.h  safearray.h  scope_guard.h  server.h  smart_enum.h  (+15 more)
src/CometAutoExp/: CometAutoExp.cpp  CometAutoExp.def  CometAutoExp.dsp  CometAutoExp.dsw
src/CometWizard/: Comet.clw  Comet.cpp  Comet.dsw  Comet.h  CometAw.cpp  CometAw.h  Debug.h  ReadMe.txt  StdAfx.h  clean.bat  comet.dsp  comet.rc  mssccprj.scc  resource.h
src/CometWizard/Template/: ReadMe.txt  Server.idl  fixfile.bat  newproj.inf  resource.h  server.aps  server.cpp  server.def  server.rc  server_old.rc  server_old2.rc  std.h
src/CometWizard/res/: Thumbs.db
src/comet/: UpgradeLog.XML  comet.ncb  comet.sln  comet.vcproj  comet.vsdir  comet.vsz  default.vcproj
src/comet/Scripts/1033/: default.js
src/comet/Templates/1033/: RCa01144  ReadMe.txt  Resource.h  Templates.inf  main.cpp  main.def  main.idl  main.rc  std.h
src/test/: Test.sln  Test.vcproj  test1.cpp  test11.cpp  test12.cpp  test15.cpp  test17.cpp  test18.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test8.cpp
src/tlb2h/: std.h  tlb2h.cpp  tlb2h.sln  tlb2h.vcproj
tests/: CMakeLists.txt  bstr.cpp  currency.cpp  datetime.cpp  enum.cpp  max_warnings.cmake  module.cpp  object.cpp  ptr.cpp  registry.cpp  safearray.cpp  stream.cpp  test1.cpp  test10.cpp  test13.cpp  test14.cpp  test16.cpp  test2.cpp  test5.cpp  test7.cpp  test9.cpp  threading.cpp  tlbinfo.cpp  typelist.cpp  uuid.cpp  variant.cpp
